--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                     <h1>MONOCHROME</h1>
                     <img class="distortimg"  src="https://cdn.jsdelivr.net/gh/conorbailey90/rgb-split-distortion-scroll-effect/images/1.jpeg" alt="">
                 </div>
+              <div class="image-container">
+                    <h1>MONOCHROME</h1>
+                    <img class="distortimg"  src="https://cdn.jsdelivr.net/gh/conorbailey90/rgb-split-distortion-scroll-effect/images/1.jpeg" alt="">
+                </div>
               
             </div>
         </div>
