--- a/index.html
+++ b/index.html
@@ -10,21 +10,16 @@
 <!-- partial:index.partial.html -->
 <html lang="en">
 <body>
-    <main>
+   <div id="allrecords">
         <div class="scrollable">
-            <div class="container">
+                <div class="image-container">   
+                    <img src="https://cdn.jsdelivr.net/gh/conorbailey90/rgb-split-distortion-scroll-effect/images/1.jpeg" alt="">
+                </div>
                 <div class="image-container">
-                    <h1>MONOCHROME</h1>
-                    <img class="tn-atom__img"  src="https://cdn.jsdelivr.net/gh/conorbailey90/rgb-split-distortion-scroll-effect/images/1.jpeg" alt="">
+                    <img src="https://cdn.jsdelivr.net/gh/conorbailey90/rgb-split-distortion-scroll-effect/images/2.jpeg" alt="">
                 </div>
-              <div class="image-container">
-                    <h1>MONOCHROME</h1>
-                    <img class="distortimg"  src="https://cdn.jsdelivr.net/gh/conorbailey90/rgb-split-distortion-scroll-effect/images/1.jpeg" alt="">
-                </div>
-              
-            </div>
         </div>
-    </main>
+    </div>
 </body>
 </html>
 <!-- partial -->
